--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@geist-ui/react": "^2.2.5",
+    "@prisma/client": "^6.5.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.49.1",
+    "dotenv": "^16.4.7",
     "next": "14.1.0",
+    "pg": "^8.14.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
@@ -25,6 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^6.5.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
