--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@geist-ui/react": "^2.2.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.3",
+    "@types/uuid": "^10.0.0",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.483.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
