--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.3",
+    "geist": "^1.3.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
