--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@geist-ui/react": "^2.2.5",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-tabs": "^1.1.9",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.1",
     "@types/recharts": "^1.8.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "glob": "^11.0.2",
     "lucide-react": "^0.487.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
@@ -26,6 +27,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "recharts": "^2.15.3",
+    "rimraf": "^6.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -35,7 +37,7 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^9.26.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^6.5.0",
