--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@geist-ui/react": "^2.2.5",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-tabs": "^1.1.9",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.1",
     "@types/recharts": "^1.8.29",
@@ -37,7 +38,7 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^9.26.0",
+    "eslint": "^8.0.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^6.5.0",
