--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/json5": "^0.0.30",
+    "@types/node": "^20.17.32",
+    "@types/phoenix": "^1.6.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.1.0",
