--- a/package.json
+++ b/package.json
@@ -13,18 +13,29 @@
     "@supabase/supabase-js": "^2.39.3",
     "geist": "^1.3.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.11",
+    "pg": "^8.14.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "recharts": "^2.15.3",
+    "rimraf": "^6.0.1",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/json5": "^0.0.30",
+    "@types/node": "^20.17.32",
+    "@types/phoenix": "^1.6.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.18.1",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.0.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^6.5.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
