--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/supabase-js": "^2.39.3",
+    "@netlify/plugin-nextjs": "^5.10.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.49.1",
     "geist": "^1.3.1",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "pg": "^8.14.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "recharts": "^2.15.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "recharts": "^2.12.2",
     "rimraf": "^6.0.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
+    "lucide-react": "^0.349.0",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "isarray": "^2.0.4"
   },
   "devDependencies": {
     "@types/json5": "^0.0.30",
