--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.10.1",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/supabase-js": "^2.49.4",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
+    "dotenv": "^16.5.0",
     "geist": "^1.3.1",
+    "isarray": "^2.0.4",
+    "lucide-react": "^0.349.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "pg": "^8.14.1",
@@ -22,12 +28,7 @@
     "recharts": "^2.12.2",
     "rimraf": "^6.0.1",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "d3-scale": "^4.0.2",
-    "d3-shape": "^3.2.0",
-    "lucide-react": "^0.349.0",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "isarray": "^2.0.4"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/json5": "^0.0.30",
