--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.9.4",
     "geist": "^1.3.1",
     "isarray": "^2.0.4",
     "lucide-react": "^0.349.0",
